--- a/client/src/components/LoginPage/LoginPage.css
+++ b/client/src/components/LoginPage/LoginPage.css
@@ -1,17 +1,31 @@
-.ui.text.container.row, h1 {
-  padding-top: 20px;
+.login-page {
+  background-color: #002266;
+}
+
+.ui.text.container.row, h1, #textfield {
   font-family: 'Amatic SC', cursive;
+}
+
+/******************
+Header
+*******************/
+h1 {
+  font-size: 50px;
+  color: white;
+  padding-top: 60px;
+}
+
+.ui.text.container.row {
+  padding-top: 20px;
   font-size: 25px;
   color: #ffcc33;
 }
 
-h1 {
-  font-size: 50px;
-  color: white;
-}
-
+/******************
+Intials text input
+*******************/
 #text-field {
-  padding-top: 150px;
+  padding-top: 200px;
 }
 
 #text-field input {
