--- a/client/src/components/LoginPage/LoginPage.css
+++ b/client/src/components/LoginPage/LoginPage.css
@@ -1,11 +1,6 @@
-html, body, #background { min-height: 100vh; min-width: 100vw; background-color:#002266;}
-
-
-/* .login-page {
-  background-color: #002266;
-} */
-
-.ui.text.container.row, h1, #textfield {
+.ui.text.container.row,
+h1,
+#textfield {
   font-family: 'Amatic SC', cursive;
 }
 
@@ -49,7 +44,6 @@ Intials text input
   background-color: #002266;
   font-family: 'Amatic SC', cursive;
 }
-
 
 #text-field button span {
   position: relative;
