--- a/client/src/components/LoginPage/LoginPage.css
+++ b/client/src/components/LoginPage/LoginPage.css
@@ -1,23 +1,28 @@
 .login-page {
   position: absolute;
-  width: 100%;
   height: 100%;
+  width: 100%;
   background-color: #002266;
 }
 
-.ui.text.container.row,
-h1,
-#textfield {
+.ui.text.container.row, h1, label, span {
   font-family: 'Amatic SC', cursive;
 }
 
-/******************
-Header
-*******************/
+.ui.container.middle.centered.aligned.grid {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+/**************
+HEADER
+***************/
 h1 {
   font-size: 50px;
   color: white;
-  padding-top: 60px;
 }
 
 .ui.text.container.row {
@@ -26,34 +31,39 @@ h1 {
   color: #ffcc33;
 }
 
-/******************
-Intials text input
-*******************/
-#text-field {
-  padding-top: 200px;
+/**************
+TEXT INPUT
+**************/
+.ui.form .field > label {
+  font-size: 25px;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  color: white;
+  font-weight: 100;
 }
 
-#text-field input {
-  width: 130px;
+.ui.form input[type=text] {
+  width: 50px;
+  background-color: #339966;
+  border: 0px;
+  font-family: 'Amatic SC', cursive;
   text-align: center;
-  background-color: #40bf80;
-  font-family: 'Amatic SC', cursive;
   font-size: 20px;
+  padding: 5px;
 }
 
-#text-field ::placeholder {
-  color: red;
-  font-weight: 900;
+.ui.form input[type=text]:focus {
+  background-color: #339966;
 }
 
-#text-field button {
-  color: #ffcc33;
-  background-color: #002266;
-  font-family: 'Amatic SC', cursive;
-}
-
-#text-field button span {
-  position: relative;
-  bottom: 10px;
+.ui.button, span {
+  padding: 0;
+  background: none;
+  color: #b38600;
   font-size: 15px;
+}
+
+.ui.button:hover {
+  background: none;
+  color: #b38600;
 }
